--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,3 +2,37 @@
  [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
     display: none !important;
   }
+
+.icon-stack {
+  font-size: 60px !important;
+  display:block !important;
+  width: 65px !important;
+  height: 65px !important;
+  text-align:center;
+  i{
+    position: absolute !important;
+    left: 0 !important;
+    right: 0 !important;
+  }
+}
+
+.icon-cap {
+  font-size: 60px !important;
+  display:block !important;
+  width: 65px !important;
+  height: 65px !important;
+  text-align:center;
+  i{
+    left:32px !important;
+    right:32px !important;
+  }
+  i:first-child{
+    position: absolute !important;
+    left: 0 !important;
+    right: 0 !important;
+  }
+}
+
+.red{
+  color: red !important;
+}
