--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,49 +1,18 @@
 <ion-side-menus>
-
   <ion-pane ion-side-menu-content>
     <ion-nav-bar class="bar-balanced nav-title-slide-ios7">
       <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i> Back</ion-nav-back-button>
     </ion-nav-bar>
-    <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
+    <!-- CENTER PANE -->
+    <ion-nav-view name="main" animation="slide-left-right"></ion-nav-view>
   </ion-pane>
 
   <ion-side-menu side="left">
-    <header class="bar bar-header bar-balanced">
-      <h1 class="title">SyncTrip</h1>
-    </header>
-    <ion-content class="has-header">
-      <ion-list>
-        <ion-item nav-clear menu-close href="#/app/search">
-          Search
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
-          Browse
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/playlists">
-          Playlists
-        </ion-item>
-      </ion-list>
-    </ion-content>
+    <!-- LEFT PANE -->
+    <ion-nav-view name="left"></ion-nav-view>
   </ion-side-menu>
 
-  <ion-side-menu side="right" ng-controller="AccountCtrl">
-    <header class="bar bar-header bar-balanced">
-      <h1 class="title">Account</h1>
-    </header>
-    <ion-content class="has-header" ng-show-auth="['logout','error']">
-      <ion-list ng-repeat="provider in providers">
-        <ion-item nav-clear menu-close href="#" eat-click ng-click="login(provider)">
-          <i class="icon ion-social-{{provider | lowercase}}"></i> Sign In with {{ provider }}
-        </ion-item>
-      </ion-list>
-    </ion-content>
-    <ion-content class="has-header" ng-show-auth="'login'">
-      <ion-list>
-        <ion-item class="item item-avatar" href="#" eat-click>
-        <img src="{{auth.user.thirdPartyUserData.picture}}" ng-show="!!auth.user && !!auth.user.thirdPartyUserData && !!auth.user.thirdPartyUserData.picture"/>
-        <h2><i class="icon ion-social-{{auth.user.provider | lowercase}}"></i>&nbsp;{{auth.user.displayName}}</h2>
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-side-menu>
+  <ion-side-menu side="right">
+    <!-- RIGHT PANE -->
+    <ion-nav-view name="right"></ion-nav-view>
 </ion-side-menus>
