--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -8,7 +8,7 @@
   <h2>Learn</h2>
   <p>
   This project represents an interesting set of challenges for me. Additionally,
-  is a fun way to learn about a bunch of new technologies like AngularJS, Ionic,
+  it's a fun way to learn about a bunch of new technologies like AngularJS, Ionic,
   Firebase, and Cordova.
   </p>
   <h2>Plan</h2>
