--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -6,7 +6,7 @@
 <div class="col col-80 col-offset-10">
   <br>
   <h1>SyncTrip&nbsp;&nbsp;<small> A real time, social trip planner and visualization tool</small></h1>
-  <h3><i class="icon ion-arrow-left-a"></i> Swipe left to Sign In and Out</h3>
+  <h3>Swipe left to Sign In and Out <i class="icon ion-arrow-left-a"></i></h3>
   <h3><i class="icon ion-arrow-right-a"></i> Swipe right to view extra options</h3>
 </div>
 <img class="item item-image banner" src="img/travel.jpg"/>
