working on templates; renames Playlist/s to Trip/s

--- a/www/templates/publicLeft.html
+++ b/www/templates/publicLeft.html
@@ -3,6 +3,9 @@
 </header>
 <ion-content class="has-header">
   <ion-list>
+    <ion-item nav-clear menu-close href="#/app/trips" ng-show="auth.user">
+      Trips
+    </ion-item>
     <ion-item nav-clear menu-close href="#/app/welcome">
       Welcome
     </ion-item>
