--- a/www/templates/trip.html
+++ b/www/templates/trip.html
@@ -1,6 +1,9 @@
-<ion-view title="Playlist">
+<ion-view title="Trip">
+  <ion-nav-buttons side="left">
+    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+  </ion-nav-buttons>
   <ion-content class="has-header">
-    <h1>Playlist</h1>
+    <h1>Trip</h1>
   </ion-content>
   <ion-nav-buttons side="right">
     <button menu-toggle="right" class="button button-icon icon ion-person"></button>
