--- a/www/templates/trips.html
+++ b/www/templates/trips.html
@@ -1,11 +1,15 @@
-<ion-view title="Playlists">
+<ion-view title="Trips">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
+   <ion-refresher
+    pulling-text="Pull to refresh..."
+    on-refresh="doRefresh()">
+  </ion-refresher>
     <ion-list>
-      <ion-item ng-repeat="playlist in playlists" href="#/app/playlists/{{playlist.id}}">
-        {{playlist.title}}
+      <ion-item ng-repeat="trip in trips" href="#/app/trips/{{trip.id}}">
+        {{trip.title}}
       </ion-item>
     </ion-list>
   </ion-content>
