--- a/www/templates/trips.html
+++ b/www/templates/trips.html
@@ -8,8 +8,13 @@
     on-refresh="doRefresh()">
   </ion-refresher>
     <ion-list>
-      <ion-item ng-repeat="trip in trips" href="#/app/trips/{{trip.id}}">
-        {{trip.title}}
+      <ion-item class="item-input">
+        <form ng-submit="createTrip()" ng-blur="createTrip()">
+          <input type="text" placeholder="New Trip Name" ng-model="newTrip.name">
+        </form>
+      </ion-item>
+      <ion-item ng-repeat="(key,trip) in trips" href="#/app/trips/{{trip.id}}">
+        {{key}}///{{trip}}
       </ion-item>
     </ion-list>
   </ion-content>
