--- a/www/templates/publicLeft.html
+++ b/www/templates/publicLeft.html
@@ -3,7 +3,7 @@
 </header>
 <ion-content class="has-header">
   <ion-list>
-    <ion-item nav-clear menu-close href="#/app/trips" ng-show="auth.user">
+    <ion-item nav-clear menu-close href="#/app/trips">
       Trips
     </ion-item>
     <ion-item nav-clear menu-close href="#/app/welcome">
