--- a/www/templates/trips.html
+++ b/www/templates/trips.html
@@ -19,13 +19,13 @@
         </div>
       </form>
       <div>
-        <div class="card responsive-card" ng-repeat="(key,trip) in trips" href="#/app/trips/{{trip.id}}">
-          <div class="item item-avatar item-icon-right" href="#/app/trips/{{key}}">
+        <div class="card responsive-card" ng-repeat="(idx,trip) in trips">
+          <a class="item item-avatar item-icon-right" ui-sref="trips.detail({ id: trip.$id})">
             <img src="{{trip.avatar || 'https://www.petfinder.com/wp-content/uploads/2012/11/122163343-conditioning-dog-loud-noises-632x475.jpg'}}">
             <h2>{{trip.name}}</h2>
             <i class="icon ion-chevron-right"></i>
             <p>{{trip.info || 'Trip desc'}}</p>
-          </div>
+          </a>
           <div class="item item-body">
             <img class="full-image" src="{{trip.pic || 'http://whitemagicsamoyeds.com/images/slides/14_Alexia_and_Her_Litter_Mates-2.jpg'}}">
             <p>
