--- a/www/css/style.css
+++ b/www/css/style.css
@@ -44,6 +44,26 @@ img.banner {
 
 }
 
+.banner-group { 
+   position: relative; 
+   width: 100%; /* for IE 6 */
+}
+.banner-group > img {
+   width: 100%;
+}
+.banner-group .item {
+   position: absolute; 
+   top: 100px; 
+   left: 0; 
+   width: auto; 
+   padding-right: 80px;
+   background-color: rgba(0, 0, 0, 0.7); 
+   border: none;
+}
+.banner-group .item h1,.banner-group .item h2, .banner-group .item h3, .banner-group .item  h4, .banner-group .item p {
+   color: whitesmoke;
+}
+
 .responsive-card {
   float:left;
   width:97%;
