--- a/www/templates/trips/list.brief.html
+++ b/www/templates/trips/list.brief.html
@@ -17,11 +17,11 @@
           </button>
       </div>
     </form>
-    <a ng-repeat="(idx,trip) in trips" class="item item-avatar item-icon-right" ui-sref="app.tripDetail({ id: trip.$id})">
+    <a ng-repeat="(idx,trip) in trips" class="item item-thumbnail-left item-icon-right" ui-sref="app.tripDetail({ id: trip.$id})">
       <img src="{{trip.avatar || 'https://www.petfinder.com/wp-content/uploads/2012/11/122163343-conditioning-dog-loud-noises-632x475.jpg'}}">
       <h2>{{trip.name}}</h2>
-      <i class="icon ion-chevron-right"></i>
       <p>{{trip.info || 'Trip desc'}}</p>
+      <i class="icon ion-chevron-right"></i>
     </a>
   </ion-list>
 </ion-content>
