better avatar default img; Trips title in sidemenu is a link to list page

--- a/www/templates/trips/details.center.html
+++ b/www/templates/trips/details.center.html
@@ -6,7 +6,7 @@
     <div class="banner-group">
       <img src="{{trip.pic || 'http://whitemagicsamoyeds.com/images/slides/14_Alexia_and_Her_Litter_Mates-2.jpg'}}">
       <div class="item item-thumbnail-left">
-        <img src="{{trip.avatar || 'https://www.petfinder.com/wp-content/uploads/2012/11/122163343-conditioning-dog-loud-noises-632x475.jpg'}}">
+        <img src="{{trip.avatar || 'http://ionicframework.com/img/docs/blue-album.jpg' }}">
         <h1>{{trip.name}} <small>{{trip.info}}</small></h1>
       </div>
     </div>
