--- a/www/css/style.css
+++ b/www/css/style.css
@@ -44,8 +44,8 @@ img.banner {
 
 }
 
-.banner-group { 
-   position: relative; 
+.banner-group {
+   position: relative;
    width: 100%; /* for IE 6 */
    padding-bottom: 40px;
 }
@@ -53,11 +53,11 @@ img.banner {
    width: 100%;
 }
 .banner-group .item {
-   position: absolute; 
-   top: 100px; 
-   left: 0; 
-   width: auto; 
-   background-color: rgba(0, 0, 0, 0.7); 
+   position: absolute;
+   top: 100px;
+   left: 0;
+   width: auto;
+   background-color: rgba(0, 0, 0, 0.7);
    border: none;
 }
 .banner-group .item .icon {
@@ -66,6 +66,7 @@ img.banner {
 }
 .banner-group .item h1,.banner-group .item h2, .banner-group .item h3, .banner-group .item  h4, .banner-group .item p {
    color: whitesmoke;
+   white-space: normal;
 }
 .banner-group .item p {
    white-space: normal;
