--- a/www/templates/trips/details.center.html
+++ b/www/templates/trips/details.center.html
@@ -5,7 +5,9 @@
   <ion-content class="has-header">
     <div class="banner-group">
       <img src="{{trip.pic || 'http://whitemagicsamoyeds.com/images/slides/14_Alexia_and_Her_Litter_Mates-2.jpg'}}" ng-hide="showMap">
-      <map zoom="map.zoom" center="map.center" ng-show="showMap"></map>
+      <google-map zoom="map.zoom" center="map.center" draggable="true">
+         <layer type="TransitLayer" show="true"></layer>
+      </google-map>
       <label class="toggle">
         <input type="checkbox" ng-model="showMap">
         <div class="track">
