working on making Trip Detail page have tabs; not sure how to handle UI-Router with it

--- a/www/templates/trips/list.brief.html
+++ b/www/templates/trips/list.brief.html
@@ -1,5 +1,5 @@
 <header class="bar bar-header bar-balanced">
-  <a ui-sref="app.trips"><h1 class="title">Trips</h1></a>
+  <a ui-sref="app.trips" menu-close><h1 class="title">Trips</h1></a>
 </header>
 <ion-content class="has-header">
   <ion-refresher
