--- a/www/templates/trips/tabs.html
+++ b/www/templates/trips/tabs.html
@@ -2,12 +2,15 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-  <ion-tabs class="tabs-positive tabs-icon-only">
-    <ion-tab title="Home" icon-on="ion-ios7-photos" icon-off="ion-ios7-photos-outline">
+  <ion-tabs class="tabs-balanced tabs-icon-only">
+    <ion-tab ui-sref="app.trip.details" title="Home" icon-on="ion-ios7-home" icon-off="ion-ios7-home-outline">
       <ion-nav-view name="first-tab"></ion-nav-view>
     </ion-tab>
-    <ion-tab title="About" icon-on="ion-ios7-location" icon-off="ion-ios7-location-outline">
+    <ion-tab ui-sref="app.trip.destinations" title="About" icon-on="ion-ios7-location" icon-off="ion-ios7-location-outline">
       <ion-nav-view name="second-tab"></ion-nav-view>
+    </ion-tab>
+    <ion-tab ui-sref="app.trip.map" title="About" icon-on="ion-ios7-location" icon-off="ion-ios7-location-outline">
+      <ion-nav-view name="third-tab"></ion-nav-view>
     </ion-tab>
   </ion-tabs>
   <ion-nav-buttons side="right">
