--- a/www/templates/trips/tabs.html
+++ b/www/templates/trips/tabs.html
@@ -6,7 +6,7 @@
     <ion-tab ui-sref="app.trip.details" title="Home" icon-on="ion-ios7-home" icon-off="ion-ios7-home-outline">
       <ion-nav-view name="first-tab"></ion-nav-view>
     </ion-tab>
-    <ion-tab ui-sref="app.trip.destinations" title="About" icon-on="ion-ios7-location" icon-off="ion-ios7-location-outline">
+    <ion-tab ui-sref="app.trip.destinations" title="About" icon-on="ion-ios7-photos" icon-off="ion-ios7-photos-outline">
       <ion-nav-view name="second-tab"></ion-nav-view>
     </ion-tab>
     <ion-tab ui-sref="app.trip.map" title="About" icon-on="ion-ios7-location" icon-off="ion-ios7-location-outline">
