--- a/www/templates/trips/tabs.html
+++ b/www/templates/trips/tabs.html
@@ -3,13 +3,13 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-tabs class="tabs-balanced tabs-icon-only">
-    <ion-tab ui-sref="app.trip.details" title="Home" icon-on="ion-ios7-home" icon-off="ion-ios7-home-outline">
+    <ion-tab ui-sref="app.trip.details" title="Trip Details" icon-on="ion-ios7-home" icon-off="ion-ios7-home-outline">
       <ion-nav-view name="first-tab"></ion-nav-view>
     </ion-tab>
-    <ion-tab ui-sref="app.trip.destinations" title="About" icon-on="ion-ios7-photos" icon-off="ion-ios7-photos-outline">
+    <ion-tab ui-sref="app.trip.destinations" title="Trip Destinations" icon-on="ion-ios7-photos" icon-off="ion-ios7-photos-outline">
       <ion-nav-view name="second-tab"></ion-nav-view>
     </ion-tab>
-    <ion-tab ui-sref="app.trip.map" title="About" icon-on="ion-ios7-location" icon-off="ion-ios7-location-outline">
+    <ion-tab ui-sref="app.trip.map" title="Trip Map" icon-on="ion-ios7-location" icon-off="ion-ios7-location-outline">
       <ion-nav-view name="third-tab"></ion-nav-view>
     </ion-tab>
   </ion-tabs>
