--- a/www/templates/trips/list.brief.html
+++ b/www/templates/trips/list.brief.html
@@ -17,7 +17,7 @@
           </button>
       </div>
     </form>
-    <a ng-repeat="(idx,trip) in trips" class="item item-thumbnail-left item-icon-right" ui-sref="app.trip.details({ id: trip.$id})">
+    <a ng-repeat="(idx,trip) in trips" class="item item-thumbnail-left item-icon-right" menu-close ui-sref="app.trip.details({ id: trip.$id})">
       <img ng-src="{{trip.avatar || 'http://ionicframework.com/img/docs/blue-album.jpg' }}">
       <h2>{{trip.name}}</h2>
       <p>{{trip.info || 'Trip desc'}}</p>
