--- a/www/templates/trips/edit.modal.html
+++ b/www/templates/trips/edit.modal.html
@@ -2,10 +2,10 @@
 
   <div class="bar bar-header bar-energized">
     <h1 class="title">Edit Details</h1>
-    <button class="button button-clear" ng-click="editModal.hide()"><i class="icon ion-close"></i></button>
+    <button class="button button-clear" ng-click="editTripModal.hide()"><i class="icon ion-close"></i></button>
   </div>
   <br><br>
-  <form ng-submit="trip.$save() && editModal.hide()">
+  <form ng-submit="trip.$save() && editTripModal.hide()">
     <div class="list">
       <div class="list">
         <label class="item item-input item-floating-label">
