--- a/www/templates/trips/tabs.html
+++ b/www/templates/trips/tabs.html
@@ -14,7 +14,7 @@
     </ion-tab>
   </ion-tabs>
   <ion-nav-buttons side="right">
-    <button class="button" ng-click="editModal.show()"><i class="icon ion-edit"></i></button>
+    <button class="button" ng-click="editTripModal.show()"><i class="icon ion-edit"></i></button>
     <button menu-toggle="right" class="button button-icon icon ion-person"></button>
   </ion-nav-buttons>
 </ion-view>
